--- a/src/stylesheets/components/_header.sass
+++ b/src/stylesheets/components/_header.sass
@@ -24,7 +24,8 @@
     pointer-events: all
 
   &__logo
-    flex: 0 0 15.5em
+    flex: 0 0 50%
+    max-width: 15.5em
 
     svg
       display: block
